image, style.css, and added navbar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 body{
     background-color: antiquewhite;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+}
+
+h1{
+    text-align: center;
     font-family: 'Fredoka One', cursive;
+}
+.container-header{
+    background-color: aqua;
+    border-style: groove;
+    border-color: black;
+    border-width: 5px;
 }
