--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body{
     background-color: antiquewhite;
     font-family: 'Fredoka One', cursive;
 }
+
+.hidden {
+    display: none;
+}
+
+.show {
+    display: inline;
+}
