--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{
     margin: 0 auto;
 }
 
-#allbuttons{
+.allbuttons{
     text-align: center;
 }
 
@@ -35,4 +35,3 @@ h1{
 .one{
     margin-top: 20px;
 }
-
