--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: antiquewhite;
+    background-color: #E4CF8E;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
     text-align: center;
 }
@@ -8,24 +8,26 @@ h1{
     text-align: center;
     font-family: 'Fredoka One', cursive;
 }
-<<<<<<< HEAD
-=======
-
-.hidden {
-    display: none;
-}
-
-.show {
-    display: inline;
-}
->>>>>>> main
 .job-interest{border:solid gray 1px}
 
 .container-header{
-    background-color: rgb(139, 102, 102);
+    background-color: #92B4F4;
     border-style: groove;
     border-color: black;
-    border-width: 5px;
+    border-width: 2px;
+}
+.container, .red{
+    margin-top: 50;
+
+}
+
+.one{
+    margin-top: 35px;
+}
+h3{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    border: 3px solid #5A449B;
+    background-color: #FFADC6 ;
 }
 
 #game{
@@ -34,21 +36,25 @@ h1{
     border: 1px solid black;
     width:60%;
     margin: 0 auto;
-<<<<<<< HEAD
-}
-
-#allbuttons{
-    text-align: center;
-}
-
-=======
     padding:15px;
 }
->>>>>>> main
 .quiz-img {
     float:right;
 }
+
 .one{
     margin-top: 20px;
 }
 
+.mission{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    border: 3px solid #5A449B; 
+    background-color:#FFADC6 ;
+}
+.row justify-content-around{
+margin-top: 30px;
+}
+
+.col-3job-interest{
+    background-color: #92B4F4;
+}
